# Talk2Metadata

./: .gitattributes  .gitignore  404.html  LICENSE  MANIFEST.in  README.md  config.example.yml  config.mcp.example.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.bat  setup.sh  sitemap.xml  visualize_concentric_circles.py  visualize_difficulty.py
.github/workflows/: docs.yml
data/raw/: README.md  customers.csv  orders.csv  products.csv
docs/: index.md  mcp-implementation.md  mcp-integration.md  mcp-quickstart.md  qa-generation.md
docs/api-reference/: rest-api.md
docs/assets/favicon/: site.webmanifest
docs/getting-started/: installation.md  quickstart.md
docs/mcp/: implementation.md  integration.md  quickstart.md
docs/qa/: difficulty-classification.md  index.md
docs/retriever/: index.md
docs/schema/: index.md
docs/user-guide/: api-server.md
docs/utils/: index.md  monitoring.md
examples/: README.md  api_client_example.py  complete_workflow.py  python_api_example.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
mcp/implementation/: index.html
mcp/integration/: index.html
mcp/quickstart/: index.html
qa/: index.html
qa/difficulty-classification/: index.html
retriever/: index.html
schema/: index.html
scripts/: check.sh  format.sh  test_workflow.sh
search/: search_index.json
src/talk2metadata/: __init__.py
src/talk2metadata/agent/: wrapper.py
src/talk2metadata/agent/providers/: __init__.py  anthropic.py  gemini.py  openai.py
src/talk2metadata/api/: __init__.py  models.py  server.py
src/talk2metadata/api/routes/: __init__.py  health.py  schema.py  search.py
src/talk2metadata/cli/: cli_main.py
src/talk2metadata/cli/commands/: __init__.py  agent.py  analyze.py  benchmark.py  index.py  ingest.py  qa.py  schema.py  schema_group.py  search.py  search_group.py  serve.py  utils_group.py
src/talk2metadata/cli/decorators/: __init__.py  options.py
src/talk2metadata/cli/handlers/: __init__.py  evaluation_handler.py  index_handler.py  ingest_handler.py  prepare_handler.py  qa_handler.py  schema_handler.py  search_handler.py
src/talk2metadata/cli/output/: __init__.py  formatters.py
src/talk2metadata/cli/utils/: __init__.py  loaders.py
src/talk2metadata/connectors/: csv_loader.py  db_connector.py  registry.py
src/talk2metadata/core/: __init__.py  hybrid_retriever.py  indexer.py  retriever.py  schema.py  schema_viz.py
src/talk2metadata/core/index/: __init__.py  indexer.py
src/talk2metadata/core/modes/: __init__.py  comparison.py  registry.py
src/talk2metadata/core/qa/: __init__.py  difficulty_classifier.py  generator.py  qa_pair.py  query_builder.py  question_generator.py  strategy_selector.py  verifier.py
src/talk2metadata/core/qa_generation/: __init__.py  answer_extractor.py  generator.py  path_instantiator.py  pattern_generator.py  pattern_review.py  pattern_review_web.py  patterns.py  qa_pair.py  question_generator.py  validator.py
src/talk2metadata/core/retriever/: __init__.py  hybrid_retriever.py  retriever.py
src/talk2metadata/core/schema/: __init__.py  fk_detector_agent.py  schema.py  schema_viz.py  types.py
src/talk2metadata/mcp/: cli.py  config.py  server.py
src/talk2metadata/mcp/auth/: oauth_proxy.py  oidc_client.py
src/talk2metadata/mcp/common/: retriever.py  schema_index.py
src/talk2metadata/mcp/prompts/: __init__.py  help.py  (+1 more)
src/talk2metadata/utils/: config.py  csv_to_db.py  logging.py  metrics.py  paths.py
tests/: test_basic.py
utils/: index.html
utils/monitoring/: index.html
(+15 files in other folders)
