[project]
name = "talk2metadata"
version = "0.1.0"
description = "Question-driven multi-table record retrieval system"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "PascalSun", email = "pascalsun23@gmail.com" }
]
maintainers = [
    { name = "PascalSun", email = "pascalsun23@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "semantic-search",
    "database",
    "nlp",
    "retrieval",
    "hybrid-search",
    "bm25",
    "embeddings",
    "faiss",
    "metadata",
    "multi-table",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    # CLI
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Data Processing
    "pandas>=1.5.0",
    "sqlalchemy>=2.0",
    # ML/Embeddings
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.22,<2.0",
    # Utils
    "tqdm>=4.65.0",
    "typing-extensions>=4.5",
]

[project.urls]
Homepage = "https://github.com/yourusername/talk2metadata"
Documentation = "https://talk2metadata.readthedocs.io"
Repository = "https://github.com/yourusername/talk2metadata"
Issues = "https://github.com/yourusername/talk2metadata/issues"
Changelog = "https://github.com/yourusername/talk2metadata/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Full installation with API server
full = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "rank-bm25>=0.2.2",  # Hybrid search
]

# Agent support (optional)
agent = [
    "openai>=1.0",
    "anthropic>=0.7.0",
]

# MCP server
mcp = [
    "mcp>=1.20.0",
    "starlette>=0.27.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "uvicorn>=0.23.0",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black==24.8.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "ipython>=8.0",
]

[project.scripts]
talk2metadata = "talk2metadata.cli:main"
talk2metadata-mcp = "talk2metadata.mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talk2metadata"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=talk2metadata --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/talk2metadata"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
